--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,1 +1,65 @@
 // app global css
+
+code {
+  background-color: rgba(220,220,220,.5);
+  border-radius: 2px;
+  padding: 5px;
+  box-decoration-break: clone;
+}
+
+input[id^="markdownpreview-checkbox-"] {
+  margin-left: 0px !important;
+  pointer-events: none;
+}
+
+.edit-input {
+  margin-left: -3px;
+  padding-left: 3px;
+  min-height: calc(100vh - 110px);
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 5px;
+}
+
+a {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer !important;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #aeaeae;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #858585;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #6a6a6a;
+}
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border: 0px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-track:active {
+  background: #dadada;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
