--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,10 +11,9 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="{{ site.github.url }}">
-        <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      </a>
+      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <a href="{{ site.github.url }}" class="btn"> Home</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
