--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,10 +1,14 @@
 // app global css
 
 code {
-  background-color: rgba(220,220,220,.5);
+  background-color: rgba(220, 220, 220, 0.5);
   border-radius: 2px;
   padding: 5px;
   box-decoration-break: clone;
+}
+
+pre {
+  overflow-y: hidden !important;
 }
 
 input[id^="markdownpreview-checkbox-"] {
